🐛 fix wrong error codes

--- a/pages/saikichueco/index.html
+++ b/pages/saikichueco/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Página</title>
+  <title>Saiki shueco</title>
   <style>
     body {
       font-family: Arial, sans-serif;
